refactor: Update OrderController to use 'id' for order retrieval and adjust OrderItem subtotal column definition for clarity